add friend detail background

--- a/Draw/Controller/Feed/FeedDetailController~ipad.xib
+++ b/Draw/Controller/Feed/FeedDetailController~ipad.xib
@@ -42,9 +42,8 @@
 					<object class="IBUIImageView" id="819923111">
 						<reference key="NSNextResponder" ref="141827972"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrameSize">{768, 1024}</string>
+						<string key="NSFrameSize">{768, 1004}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="555051130"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -56,9 +55,8 @@
 					<object class="IBUIImageView" id="555051130">
 						<reference key="NSNextResponder" ref="141827972"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrameSize">{768, 935}</string>
+						<string key="NSFrameSize">{768, 916}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="163844663"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -70,9 +68,8 @@
 					<object class="IBUIImageView" id="618456716">
 						<reference key="NSNextResponder" ref="141827972"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{151, 66}, {465, 89}}</string>
+						<string key="NSFrame">{{151, 64}, {465, 87}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="866958469"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -84,9 +81,8 @@
 					<object class="IBUIImageView" id="163844663">
 						<reference key="NSNextResponder" ref="141827972"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrameSize">{768, 111}</string>
+						<string key="NSFrameSize">{768, 108}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="27418821"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -98,9 +94,8 @@
 					<object class="IBUIButton" id="27418821">
 						<reference key="NSNextResponder" ref="141827972"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{12, 11}, {88, 78}}</string>
+						<string key="NSFrame">{{12, 10}, {88, 76}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="146667255"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -135,9 +130,8 @@
 					<object class="IBUILabel" id="146667255">
 						<reference key="NSNextResponder" ref="141827972"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{120, 0}, {528, 111}}</string>
+						<string key="NSFrame">{{120, 0}, {528, 108}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="618456716"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -171,9 +165,8 @@
 					<object class="IBUITableView" id="527899610">
 						<reference key="NSNextResponder" ref="141827972"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{24, 454}, {720, 434}}</string>
+						<string key="NSFrame">{{24, 445}, {720, 425}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="200727363"/>
 						<reference key="IBUIBackgroundColor" ref="75250085"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -192,9 +185,8 @@
 					<object class="IBUILabel" id="200727363">
 						<reference key="NSNextResponder" ref="141827972"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{48, 458}, {672, 133}}</string>
+						<string key="NSFrame">{{48, 449}, {672, 130}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="845434084"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="870777980">
 							<int key="NSColorSpace">3</int>
@@ -230,9 +222,8 @@
 					<object class="IBUIImageView" id="866958469">
 						<reference key="NSNextResponder" ref="141827972"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{660, 11}, {84, 78}}</string>
+						<string key="NSFrame">{{660, 10}, {84, 76}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="824189244"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -240,9 +231,8 @@
 					<object class="IBUILabel" id="444596871">
 						<reference key="NSNextResponder" ref="141827972"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{518, 338}, {230, 46}}</string>
+						<string key="NSFrame">{{518, 331}, {230, 45}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="400890904"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -270,9 +260,8 @@
 					<object class="IBUILabel" id="807744600">
 						<reference key="NSNextResponder" ref="141827972"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{103, 403}, {307, 46}}</string>
+						<string key="NSFrame">{{103, 395}, {307, 45}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="527899610"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -301,9 +290,8 @@
 					<object class="IBUIButton" id="554680063">
 						<reference key="NSNextResponder" ref="141827972"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{518, 262}, {163, 58}}</string>
+						<string key="NSFrame">{{518, 257}, {163, 56}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="444596871"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -338,14 +326,13 @@
 					</object>
 					<object class="IBUIView" id="845434084">
 						<reference key="NSNextResponder" ref="141827972"/>
-						<int key="NSvFlags">292</int>
+						<int key="NSvFlags">319</int>
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUIImageView" id="1029985620">
 								<reference key="NSNextResponder" ref="845434084"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">301</int>
 								<string key="NSFrameSize">{768, 91}</string>
 								<reference key="NSSuperview" ref="845434084"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1067315516"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -354,10 +341,9 @@
 							</object>
 							<object class="IBUIButton" id="1020020007">
 								<reference key="NSNextResponder" ref="845434084"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{585, 4}, {168, 71}}</string>
+								<int key="NSvFlags">301</int>
+								<string key="NSFrame">{{585, 3}, {168, 71}}</string>
 								<reference key="NSSuperview" ref="845434084"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -384,10 +370,9 @@
 							</object>
 							<object class="IBUIImageView" id="1067315516">
 								<reference key="NSNextResponder" ref="845434084"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{14, 4}, {552, 71}}</string>
+								<int key="NSvFlags">301</int>
+								<string key="NSFrame">{{14, 3}, {552, 71}}</string>
 								<reference key="NSSuperview" ref="845434084"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="176616936"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -395,10 +380,9 @@
 							</object>
 							<object class="IBUITextView" id="176616936">
 								<reference key="NSNextResponder" ref="845434084"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{14, 4}, {552, 71}}</string>
 								<reference key="NSSuperview" ref="845434084"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1020020007"/>
 								<reference key="IBUIBackgroundColor" ref="870777980"/>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -415,9 +399,8 @@
 								<reference key="IBUIFont" ref="535254684"/>
 							</object>
 						</array>
-						<string key="NSFrame">{{0, 932}, {768, 91}}</string>
+						<string key="NSFrame">{{0, 913}, {768, 89}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1029985620"/>
 						<reference key="IBUIBackgroundColor" ref="870777980"/>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -425,9 +408,8 @@
 					<object class="IBUILabel" id="400890904">
 						<reference key="NSNextResponder" ref="141827972"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{36, 403}, {100, 46}}</string>
+						<string key="NSFrame">{{36, 395}, {100, 45}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="807744600"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -449,9 +431,8 @@
 					<object class="IBUIView" id="824189244">
 						<reference key="NSNextResponder" ref="141827972"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{271, 162}, {228, 222}}</string>
+						<string key="NSFrame">{{271, 158}, {228, 217}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="524276966"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -464,9 +445,8 @@
 					<object class="IBUIButton" id="524276966">
 						<reference key="NSNextResponder" ref="141827972"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{271, 162}, {228, 222}}</string>
+						<string key="NSFrame">{{271, 158}, {228, 217}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="554680063"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="870777980"/>
@@ -491,9 +471,8 @@
 						</object>
 					</object>
 				</array>
-				<string key="NSFrameSize">{768, 1024}</string>
+				<string key="NSFrameSize">{768, 1004}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="819923111"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -862,151 +841,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">170</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">FeedDetailController</string>
-					<string key="superclassName">PPTableViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="clickActionButton:">id</string>
-						<string key="clickBackButton:">id</string>
-						<string key="clickSendButton:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="clickActionButton:">
-							<string key="name">clickActionButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="clickBackButton:">
-							<string key="name">clickBackButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="clickSendButton:">
-							<string key="name">clickSendButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="actionButton">UIButton</string>
-						<string key="commentInput">UITextView</string>
-						<string key="commentLabel">UILabel</string>
-						<string key="drawView">ShowDrawView</string>
-						<string key="followButton">UIButton</string>
-						<string key="guessStatLabel">UILabel</string>
-						<string key="inputBackground">UIImageView</string>
-						<string key="inputBackgroundView">UIView</string>
-						<string key="nickNameLabel">UILabel</string>
-						<string key="noCommentTipsLabel">UILabel</string>
-						<string key="paperImage">UIImageView</string>
-						<string key="replayButton">UIButton</string>
-						<string key="sendButton">UIButton</string>
-						<string key="timeLabel">UILabel</string>
-						<string key="titleLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="actionButton">
-							<string key="name">actionButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="commentInput">
-							<string key="name">commentInput</string>
-							<string key="candidateClassName">UITextView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="commentLabel">
-							<string key="name">commentLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="drawView">
-							<string key="name">drawView</string>
-							<string key="candidateClassName">ShowDrawView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="followButton">
-							<string key="name">followButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="guessStatLabel">
-							<string key="name">guessStatLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="inputBackground">
-							<string key="name">inputBackground</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="inputBackgroundView">
-							<string key="name">inputBackgroundView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="nickNameLabel">
-							<string key="name">nickNameLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="noCommentTipsLabel">
-							<string key="name">noCommentTipsLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="paperImage">
-							<string key="name">paperImage</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="replayButton">
-							<string key="name">replayButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="sendButton">
-							<string key="name">sendButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="timeLabel">
-							<string key="name">timeLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="titleLabel">
-							<string key="name">titleLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FeedDetailController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">PPTableViewController</string>
-					<string key="superclassName">PPViewController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">dataTableView</string>
-						<string key="NS.object.0">UITableView</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">dataTableView</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">dataTableView</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PPTableViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">PPViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PPViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">ShowDrawView</string>
-					<string key="superclassName">UIView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ShowDrawView.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
