--- a/Draw/Controller/Home/HomeController~iPad.xib
+++ b/Draw/Controller/Home/HomeController~iPad.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1296</int>
-		<string key="IBDocument.SystemVersion">11E53</string>
+		<string key="IBDocument.SystemVersion">11D50b</string>
 		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
-		<string key="IBDocument.AppKitVersion">1138.47</string>
-		<string key="IBDocument.HIToolboxVersion">569.00</string>
+		<string key="IBDocument.AppKitVersion">1138.32</string>
+		<string key="IBDocument.HIToolboxVersion">568.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">1179</string>
@@ -99,7 +99,7 @@
 					<object class="IBUILabel" id="556470893">
 						<reference key="NSNextResponder" ref="711550771"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{0, 967}, {120, 39}}</string>
+						<string key="NSFrame">{{5, 967}, {120, 39}}</string>
 						<reference key="NSSuperview" ref="711550771"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="244044496"/>
@@ -237,10 +237,9 @@
 					<object class="IBUILabel" id="80078400">
 						<reference key="NSNextResponder" ref="711550771"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{648, 967}, {120, 39}}</string>
+						<string key="NSFrame">{{643, 967}, {120, 39}}</string>
 						<reference key="NSSuperview" ref="711550771"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -262,7 +261,7 @@
 					<object class="IBUIButton" id="612583880">
 						<reference key="NSNextResponder" ref="711550771"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{57, 327}, {160, 146}}</string>
+						<string key="NSFrame">{{57, 327}, {160, 191}}</string>
 						<reference key="NSSuperview" ref="711550771"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="884931338"/>
@@ -270,6 +269,10 @@
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
+						<double key="IBUIContentEdgeInsets.top">0.0</double>
+						<double key="IBUIContentEdgeInsets.bottom">45</double>
+						<double key="IBUIContentEdgeInsets.left">0.0</double>
+						<double key="IBUIContentEdgeInsets.right">0.0</double>
 						<string key="IBUITitleShadowOffset">{0, 1}</string>
 						<reference key="IBUIHighlightedTitleColor" ref="634139745"/>
 						<object class="NSColor" key="IBUINormalTitleColor" id="55997865">
@@ -297,7 +300,7 @@
 					<object class="IBUIButton" id="453852560">
 						<reference key="NSNextResponder" ref="711550771"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{57, 547}, {160, 146}}</string>
+						<string key="NSFrame">{{57, 547}, {160, 191}}</string>
 						<reference key="NSSuperview" ref="711550771"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="66171605"/>
@@ -305,6 +308,10 @@
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
+						<double key="IBUIContentEdgeInsets.top">0.0</double>
+						<double key="IBUIContentEdgeInsets.bottom">45</double>
+						<double key="IBUIContentEdgeInsets.left">0.0</double>
+						<double key="IBUIContentEdgeInsets.right">0.0</double>
 						<string key="IBUITitleShadowOffset">{0, 1}</string>
 						<reference key="IBUIHighlightedTitleColor" ref="634139745"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
@@ -363,7 +370,7 @@
 					<object class="IBUIButton" id="66171605">
 						<reference key="NSNextResponder" ref="711550771"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{304, 547}, {160, 146}}</string>
+						<string key="NSFrame">{{304, 547}, {160, 191}}</string>
 						<reference key="NSSuperview" ref="711550771"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="513382529"/>
@@ -371,6 +378,10 @@
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
+						<double key="IBUIContentEdgeInsets.top">0.0</double>
+						<double key="IBUIContentEdgeInsets.bottom">45</double>
+						<double key="IBUIContentEdgeInsets.left">0.0</double>
+						<double key="IBUIContentEdgeInsets.right">0.0</double>
 						<string key="IBUITitleShadowOffset">{0, 1}</string>
 						<reference key="IBUIHighlightedTitleColor" ref="634139745"/>
 						<reference key="IBUINormalTitleColor" ref="55997865"/>
@@ -422,7 +433,7 @@
 					<object class="IBUIButton" id="317344264">
 						<reference key="NSNextResponder" ref="711550771"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{0, 903}, {120, 100}}</string>
+						<string key="NSFrame">{{5, 903}, {120, 100}}</string>
 						<reference key="NSSuperview" ref="711550771"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="556470893"/>
@@ -452,7 +463,7 @@
 					<object class="IBUIButton" id="963829033">
 						<reference key="NSNextResponder" ref="711550771"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{648, 903}, {120, 100}}</string>
+						<string key="NSFrame">{{643, 903}, {120, 100}}</string>
 						<reference key="NSSuperview" ref="711550771"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="80078400"/>
@@ -503,7 +514,7 @@
 					<object class="IBUIButton" id="884931338">
 						<reference key="NSNextResponder" ref="711550771"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{304, 327}, {160, 146}}</string>
+						<string key="NSFrame">{{561, 327}, {160, 191}}</string>
 						<reference key="NSSuperview" ref="711550771"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="97235807"/>
@@ -511,6 +522,10 @@
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
+						<double key="IBUIContentEdgeInsets.top">0.0</double>
+						<double key="IBUIContentEdgeInsets.bottom">45</double>
+						<double key="IBUIContentEdgeInsets.left">0.0</double>
+						<double key="IBUIContentEdgeInsets.right">0.0</double>
 						<string key="IBUINormalTitle">我要猜</string>
 						<reference key="IBUIHighlightedTitleColor" ref="634139745"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
@@ -531,7 +546,7 @@
 					<object class="IBUIButton" id="97235807">
 						<reference key="NSNextResponder" ref="711550771"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{561, 327}, {160, 146}}</string>
+						<string key="NSFrame">{{304, 327}, {160, 191}}</string>
 						<reference key="NSSuperview" ref="711550771"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1062958479"/>
@@ -539,6 +554,10 @@
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
+						<double key="IBUIContentEdgeInsets.top">0.0</double>
+						<double key="IBUIContentEdgeInsets.bottom">45</double>
+						<double key="IBUIContentEdgeInsets.left">0.0</double>
+						<double key="IBUIContentEdgeInsets.right">0.0</double>
 						<string key="IBUINormalTitle">我要画</string>
 						<reference key="IBUIHighlightedTitleColor" ref="634139745"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
@@ -588,7 +607,7 @@
 					<object class="IBUIButton" id="513382529">
 						<reference key="NSNextResponder" ref="711550771"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{561, 547}, {160, 146}}</string>
+						<string key="NSFrame">{{561, 547}, {160, 191}}</string>
 						<reference key="NSSuperview" ref="711550771"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="808785578"/>
@@ -596,6 +615,10 @@
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
+						<double key="IBUIContentEdgeInsets.top">0.0</double>
+						<double key="IBUIContentEdgeInsets.bottom">45</double>
+						<double key="IBUIContentEdgeInsets.left">0.0</double>
+						<double key="IBUIContentEdgeInsets.right">0.0</double>
 						<string key="IBUINormalTitle">动态</string>
 						<reference key="IBUIHighlightedTitleColor" ref="634139745"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
@@ -784,7 +807,7 @@
 					<object class="IBUILabel" id="441499091">
 						<reference key="NSNextResponder" ref="711550771"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{561, 473}, {160, 45}}</string>
+						<string key="NSFrame">{{304, 473}, {160, 45}}</string>
 						<reference key="NSSuperview" ref="711550771"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="453852560"/>
@@ -809,7 +832,7 @@
 					<object class="IBUILabel" id="926282894">
 						<reference key="NSNextResponder" ref="711550771"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{304, 473}, {160, 45}}</string>
+						<string key="NSFrame">{{561, 473}, {160, 45}}</string>
 						<reference key="NSSuperview" ref="711550771"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="441499091"/>
@@ -1078,6 +1101,15 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickFriendsButton:</string>
+						<reference key="source" ref="319100864"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">197</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">clickCheckIn:</string>
 						<reference key="source" ref="1000034930"/>
 						<reference key="destination" ref="372490531"/>
@@ -1147,7 +1179,6 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="554567597"/>
 							<reference ref="881586374"/>
-							<reference ref="441499091"/>
 							<reference ref="926282894"/>
 							<reference ref="1062958479"/>
 							<reference ref="513382529"/>
@@ -1175,6 +1206,7 @@
 							<reference ref="126943415"/>
 							<reference ref="808785578"/>
 							<reference ref="628276490"/>
+							<reference ref="441499091"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -1377,7 +1409,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">196</int>
+			<int key="maxID">197</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1390,6 +1422,7 @@
 						<string key="clickDrawButton:">id</string>
 						<string key="clickFeedButton:">id</string>
 						<string key="clickFeedback:">id</string>
+						<string key="clickFriendsButton:">id</string>
 						<string key="clickGuessButton:">id</string>
 						<string key="clickPlayWithFriend:">id</string>
 						<string key="clickSettings:">id</string>
@@ -1416,6 +1449,10 @@
 						</object>
 						<object class="IBActionInfo" key="clickFeedback:">
 							<string key="name">clickFeedback:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="clickFriendsButton:">
+							<string key="name">clickFriendsButton:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 						<object class="IBActionInfo" key="clickGuessButton:">
