update to register when no user

--- a/Draw/Controller/PrivateChat/ChatDetailController.xib
+++ b/Draw/Controller/PrivateChat/ChatDetailController.xib
@@ -134,7 +134,7 @@
 					<object class="IBUIButton" id="1010117338">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{259, 9}, {52, 28}}</string>
+						<string key="NSFrame">{{262, 7}, {54, 32}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -142,13 +142,20 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
+						<double key="IBUIContentEdgeInsets.top">0.0</double>
+						<double key="IBUIContentEdgeInsets.bottom">0.0</double>
+						<double key="IBUIContentEdgeInsets.left">18</double>
+						<double key="IBUIContentEdgeInsets.right">4</double>
 						<string key="IBUITitleShadowOffset">{0, 1}</string>
-						<string key="IBUINormalTitle">刷新</string>
 						<reference key="IBUIHighlightedTitleColor" ref="33122391"/>
 						<reference key="IBUINormalTitleColor" ref="33122391"/>
 						<object class="NSColor" key="IBUINormalTitleShadowColor" id="43266349">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MAA</bytes>
+						</object>
+						<object class="NSCustomResource" key="IBUINormalImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">refresh@2x.png</string>
 						</object>
 						<object class="IBUIFontDescription" key="IBUIFontDescription" id="455006812">
 							<int key="type">2</int>
@@ -723,6 +730,7 @@
 			<string key="light_yellow_bg@2x.png">{640, 960}</string>
 			<string key="paper@2x.png">{640, 960}</string>
 			<string key="paperclip@2x.png">{388, 79}</string>
+			<string key="refresh@2x.png">{74, 74}</string>
 			<string key="topwood@2x.png">{640, 99}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">1179</string>
