--- a/Draw/Controller/Home/HomeController~iPad.xib
+++ b/Draw/Controller/Home/HomeController~iPad.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1280</int>
-		<string key="IBDocument.SystemVersion">10K549</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
-		<string key="IBDocument.AppKitVersion">1038.36</string>
-		<string key="IBDocument.HIToolboxVersion">461.00</string>
+		<int key="IBDocument.SystemTarget">1296</int>
+		<string key="IBDocument.SystemVersion">11D50b</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
+		<string key="IBDocument.AppKitVersion">1138.32</string>
+		<string key="IBDocument.HIToolboxVersion">568.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">933</string>
+			<string key="NS.object.0">1179</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBUIButton</string>
@@ -117,7 +117,6 @@
 						</object>
 						<string key="IBUIShadowOffset">{0, 1}</string>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription" id="357269993">
@@ -129,6 +128,7 @@
 							<double key="NSSize">22</double>
 							<int key="NSfFlags">16</int>
 						</object>
+						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="288608346">
 						<reference key="NSNextResponder" ref="711550771"/>
@@ -148,11 +148,11 @@
 						<reference key="IBUIShadowColor" ref="634139745"/>
 						<string key="IBUIShadowOffset">{0, 1}</string>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
 						<reference key="IBUIFontDescription" ref="357269993"/>
 						<reference key="IBUIFont" ref="960675316"/>
+						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="893160676">
 						<reference key="NSNextResponder" ref="711550771"/>
@@ -172,11 +172,11 @@
 						<reference key="IBUIShadowColor" ref="634139745"/>
 						<string key="IBUIShadowOffset">{0, 1}</string>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
 						<reference key="IBUIFontDescription" ref="357269993"/>
 						<reference key="IBUIFont" ref="960675316"/>
+						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="1045823772">
 						<reference key="NSNextResponder" ref="711550771"/>
@@ -196,11 +196,11 @@
 						<reference key="IBUIShadowColor" ref="634139745"/>
 						<string key="IBUIShadowOffset">{0, 1}</string>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
 						<reference key="IBUIFontDescription" ref="357269993"/>
 						<reference key="IBUIFont" ref="960675316"/>
+						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="680467418">
 						<reference key="NSNextResponder" ref="711550771"/>
@@ -220,11 +220,11 @@
 						<reference key="IBUIShadowColor" ref="634139745"/>
 						<string key="IBUIShadowOffset">{0, 1}</string>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
 						<reference key="IBUIFontDescription" ref="357269993"/>
 						<reference key="IBUIFont" ref="960675316"/>
+						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="80078400">
 						<reference key="NSNextResponder" ref="711550771"/>
@@ -232,7 +232,6 @@
 						<string key="NSFrame">{{643, 967}, {120, 39}}</string>
 						<reference key="NSSuperview" ref="711550771"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -244,11 +243,11 @@
 						<reference key="IBUIShadowColor" ref="634139745"/>
 						<string key="IBUIShadowOffset">{0, 1}</string>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
 						<reference key="IBUIFontDescription" ref="357269993"/>
 						<reference key="IBUIFont" ref="960675316"/>
+						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUIButton" id="612583880">
 						<reference key="NSNextResponder" ref="711550771"/>
@@ -362,7 +361,7 @@
 					<object class="IBUIButton" id="66171605">
 						<reference key="NSNextResponder" ref="711550771"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{304, 547}, {160, 191}}</string>
+						<string key="NSFrame">{{561, 547}, {160, 191}}</string>
 						<reference key="NSSuperview" ref="711550771"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="513382529"/>
@@ -599,7 +598,7 @@
 					<object class="IBUIButton" id="513382529">
 						<reference key="NSNextResponder" ref="711550771"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{561, 547}, {160, 191}}</string>
+						<string key="NSFrame">{{304, 547}, {160, 191}}</string>
 						<reference key="NSSuperview" ref="711550771"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="676049437"/>
@@ -705,7 +704,6 @@
 						<reference key="IBUIShadowColor" ref="634139745"/>
 						<string key="IBUIShadowOffset">{0, 1}</string>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription" id="214592561">
@@ -717,11 +715,12 @@
 							<double key="NSSize">26</double>
 							<int key="NSfFlags">16</int>
 						</object>
+						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="554567597">
 						<reference key="NSNextResponder" ref="711550771"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{561, 694}, {160, 45}}</string>
+						<string key="NSFrame">{{304, 694}, {160, 45}}</string>
 						<reference key="NSSuperview" ref="711550771"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="628276490"/>
@@ -736,16 +735,16 @@
 						<reference key="IBUIShadowColor" ref="634139745"/>
 						<string key="IBUIShadowOffset">{0, 1}</string>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
 						<reference key="IBUIFontDescription" ref="214592561"/>
 						<reference key="IBUIFont" ref="96583567"/>
+						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="881586374">
 						<reference key="NSNextResponder" ref="711550771"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{304, 694}, {163, 45}}</string>
+						<string key="NSFrame">{{560, 694}, {163, 45}}</string>
 						<reference key="NSSuperview" ref="711550771"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="554567597"/>
@@ -760,11 +759,11 @@
 						<reference key="IBUIShadowColor" ref="634139745"/>
 						<string key="IBUIShadowOffset">{0, 1}</string>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
 						<reference key="IBUIFontDescription" ref="214592561"/>
 						<reference key="IBUIFont" ref="96583567"/>
+						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="808785578">
 						<reference key="NSNextResponder" ref="711550771"/>
@@ -784,11 +783,11 @@
 						<reference key="IBUIShadowColor" ref="634139745"/>
 						<string key="IBUIShadowOffset">{0, 1}</string>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
 						<reference key="IBUIFontDescription" ref="214592561"/>
 						<reference key="IBUIFont" ref="96583567"/>
+						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="441499091">
 						<reference key="NSNextResponder" ref="711550771"/>
@@ -808,11 +807,11 @@
 						<reference key="IBUIShadowColor" ref="634139745"/>
 						<string key="IBUIShadowOffset">{0, 1}</string>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
 						<reference key="IBUIFontDescription" ref="214592561"/>
 						<reference key="IBUIFont" ref="96583567"/>
+						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="926282894">
 						<reference key="NSNextResponder" ref="711550771"/>
@@ -832,16 +831,16 @@
 						<reference key="IBUIShadowColor" ref="634139745"/>
 						<string key="IBUIShadowOffset">{0, 1}</string>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
 						<reference key="IBUIFontDescription" ref="214592561"/>
 						<reference key="IBUIFont" ref="96583567"/>
+						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUIButton" id="676049437">
 						<reference key="NSNextResponder" ref="711550771"/>
 						<int key="NSvFlags">-2147483356</int>
-						<string key="NSFrame">{{671, 557}, {50, 50}}</string>
+						<string key="NSFrame">{{398, 557}, {50, 50}}</string>
 						<reference key="NSSuperview" ref="711550771"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="808785578"/>
@@ -1254,8 +1253,6 @@
 						<int key="objectID">133</int>
 						<reference key="object" ref="711550771"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="554567597"/>
-							<reference ref="881586374"/>
 							<reference ref="926282894"/>
 							<reference ref="1062958479"/>
 							<reference ref="513382529"/>
@@ -1287,6 +1284,8 @@
 							<reference ref="676049437"/>
 							<reference ref="199568882"/>
 							<reference ref="694885542"/>
+							<reference ref="554567597"/>
+							<reference ref="881586374"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -1726,7 +1725,7 @@
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1280" key="NS.object.0"/>
+			<real value="1296" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
@@ -1750,6 +1749,6 @@
 			<string key="small_sign@2x.png">{59, 59}</string>
 			<string key="wood_bg@2x.png">{640, 960}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">933</string>
+		<string key="IBCocoaTouchPluginVersion">1179</string>
 	</data>
 </archive>
